[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/UI/gear.png" type="Texture" id=1]
[ext_resource path="res://0 - General/Themes/Normal.tres" type="Theme" id=2]
[ext_resource path="res://0 - General/Themes/Fonts/futur2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Interfaz.gd" type="Script" id=11]
[ext_resource path="res://Sprites/test/background.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
font_data = ExtResource( 3 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true

[node name="Mensaje" type="Label" parent="."]
anchor_right = 1.0
margin_top = 87.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "FLAPPY MONEY"
align = 1
valign = 1

[node name="Instrucciones" type="Control" parent="."]
margin_left = 45.0
margin_top = 194.0
margin_right = 681.0
margin_bottom = 943.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Instrucciones"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.901961 )

[node name="Label" type="Label" parent="Instrucciones"]
margin_top = 30.0
margin_right = 636.0
margin_bottom = 377.0
text = "¡¡¡ Protege tu dinero !!!

Las novedades de manga hacen peligrar nuestro dinero. Evita los manga para guardar tu dinero.

¿Cuánto dinero podrás proteger?"
align = 1
autowrap = true

[node name="MenuContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = -115.0
margin_right = -42.0
margin_bottom = -30.0
theme = ExtResource( 2 )

[node name="Menu" type="HBoxContainer" parent="MenuContainer"]
margin_top = 5.0
margin_right = 636.0
margin_bottom = 79.0
size_flags_vertical = 4
custom_constants/separation = 30
alignment = 1

[node name="PlayBtn" type="Button" parent="MenuContainer/Menu"]
margin_right = 373.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = "JUGAR"

[node name="SettingsBtn" type="Button" parent="MenuContainer/Menu"]
margin_left = 403.0
margin_right = 477.0
margin_bottom = 74.0
icon = ExtResource( 1 )
flat = true

[node name="QuitBtn" type="Button" parent="MenuContainer/Menu"]
margin_left = 507.0
margin_right = 636.0
margin_bottom = 74.0
text = "  SALIR  "

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="MenuContainer/Menu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MenuContainer/Menu/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MenuContainer/Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
